--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h2 class="fw-bold mt-5 mx-3 text-dark">Quizzes Trivia</h2>
         <form action="#" class="px-3" method="post">
           <div id="con" class="border py-3 container-fluid overflow-auto" style="height: 400px;"></div>
-          <button type="submit" class="btn mt-4 btn-primary btn-md btn-block">Submit</button>
+          <button type="submit" class="btn mt-4 btn-primary btn-md btn-block" style="width: 100%;">Submit</button>
         </form>
       </div>
     </div>
